# Chess

./: CMakeLists.txt  Main.cpp  Main.h  README.md  conandata.yml  conanfile.py  gui.cpp  gui.h  main.cpp
headers/: Bishop.h  Board.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h
src/: Board.cpp  Main.cpp  Piece.cpp
src/pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp
